--- a/interface-elements-for-web/toc.yml
+++ b/interface-elements-for-web/toc.yml
@@ -604,6 +604,19 @@
         href: articles/report-designer/use-report-elements/use-bar-codes/upc-e0.md
       - name: UPC-E1
         href: articles/report-designer/use-report-elements/use-bar-codes/upc-e1.md
+    - name: Use Charts and Pivot Grids
+      href: articles/report-designer/use-report-elements/use-charts-and-pivot-grids.md
+      items:
+      - name: Use Charts in Reports
+        href: articles/report-designer/use-report-elements/use-charts-and-pivot-grids/use-charts-in-reports.md
+      - name: Add a Chart (Set Up Series Manually)
+        href: articles/report-designer/use-report-elements/use-charts-and-pivot-grids/add-a-chart-set-up-series-manually.md
+      - name: Add a Chart (Use a Series Template)
+        href: articles/report-designer/use-report-elements/use-charts-and-pivot-grids/add-a-chart-use-a-series-template.md
+      - name: Use Charts to Visualize Data in Report Groups
+        href: articles/report-designer/use-report-elements/use-charts-and-pivot-grids/use-charts-to-visualize-data-in-report-groups.md
+      - name: Link a Chart and a Pivot Grid
+        href: articles/report-designer/use-report-elements/use-charts-and-pivot-grids/link-a-chart-and-a-pivot-grid.md
     - name: Use Gauges and Sparklines
       href: articles/report-designer/use-report-elements/use-gauges-and-sparklines.md
       items:
