--- a/interface-elements-for-web/toc.yml
+++ b/interface-elements-for-web/toc.yml
@@ -648,6 +648,17 @@
         href: articles/report-designer/use-report-elements/draw-lines-and-shapes/draw-shapes.md
       - name: Draw Cross-Band Lines and Boxes
         href: articles/report-designer/use-report-elements/draw-lines-and-shapes/draw-cross-band-lines-and-boxes.md
+  - name: Add Navigation
+    href: articles/report-designer/add-navigation.md
+    items:
+    - name: Add Page Numbers
+      href: articles/report-designer/add-navigation/add-page-numbers.md
+    - name: Add Cross-References and Hyperlinks
+      href: articles/report-designer/add-navigation/add-cross-references-and-hyperlinks.md
+    - name: Add Bookmarks and a Document Map
+      href: articles/report-designer/add-navigation/add-bookmarks-and-a-document-map.md
+    - name: Create a Table of Contents
+      href: articles/report-designer/add-navigation/add-a-table-of-contents.md
 - name: Ribbon
   href: articles/ribbon.md
   items:
