--- a/interface-elements-for-web/toc.yml
+++ b/interface-elements-for-web/toc.yml
@@ -648,6 +648,19 @@
         href: articles/report-designer/use-report-elements/draw-lines-and-shapes/draw-shapes.md
       - name: Draw Cross-Band Lines and Boxes
         href: articles/report-designer/use-report-elements/draw-lines-and-shapes/draw-cross-band-lines-and-boxes.md
+  - name: Lay out Dynamic Report Content
+    href: articles/report-designer/lay-out-dynamic-report-content.md
+    items:
+    - name: Maintain the Band Location on a Page
+      href: articles/report-designer/lay-out-dynamic-report-content/maintain-the-band-location-on-a-page.md
+    - name: Keep Content Together
+      href: articles/report-designer/lay-out-dynamic-report-content/keep-content-together.md
+    - name: Maintain the Size and Content of Data-Bound Controls
+      href: articles/report-designer/lay-out-dynamic-report-content/maintain-the-size-and-content-of-data-bound-controls.md
+    - name: Anchor Controls
+      href: articles/report-designer/lay-out-dynamic-report-content/anchor-controls.md
+    - name: Suppress Controls
+      href: articles/report-designer/lay-out-dynamic-report-content/suppress-controls.md
   - name: Add Navigation
     href: articles/report-designer/add-navigation.md
     items:
