--- a/interface-elements-for-web/toc.yml
+++ b/interface-elements-for-web/toc.yml
@@ -10,7 +10,7 @@
     items:
     - name: Add and Delete Cards
       href: articles/card-view/data-editing/add-and-delete-cards.md
-    - name: Switching a CardView to Edit Mode
+    - name: Switching a Card View to Edit Mode
       href: articles/card-view/data-editing/switching-a-cardview-to-edit-mode.md
     - name: 'Save or Discard Changes '
       href: articles/card-view/data-editing/save-or-discard-changes.md
@@ -26,14 +26,14 @@
     href: articles/card-view/sorting.md
   - name: Filtering
     items:
-    - name: Creating Complex Filter Criteria with the Filter Control
-      href: articles/card-view/filtering/creating-complex-filter-criteria-with-the-filter-control.md
     - name: Header Filter
       href: articles/card-view/filtering/header-filter.md
     - name: Date Range Header Filter
       href: articles/card-view/filtering/date-range-header-filter.md      
     - name: Search Panel
       href: articles/card-view/filtering/search-panel.md
+    - name: Creating Complex Filter Criteria with the Filter Builder
+      href: articles/card-view/filtering/creating-complex-filter-criteria-with-the-filter-control.md
   - name: Exporting
     href: articles/card-view/exporting/exporting.md
 - name: Charting
