--- a/interface-elements-for-web/toc.yml
+++ b/interface-elements-for-web/toc.yml
@@ -793,7 +793,7 @@
       href: articles/report-designer/provide-interactivity/create-drill-down-reports.md
     - name: Sort a Report in Print Preview
       href: articles/report-designer/provide-interactivity/sort-a-report-in-print-preview.md
-    - name: Content Editing in Print Preview
+    - name: Edit Content in Print Preview
       href: articles/report-designer/provide-interactivity/edit-content-in-print-preview.md
   - name: Add Navigation
     href: articles/report-designer/add-navigation.md
