--- a/interface-elements-for-web/toc.yml
+++ b/interface-elements-for-web/toc.yml
@@ -835,6 +835,8 @@
     - name: Report Wizard
       href: articles/report-designer/report-designer-tools/report-wizard.md
       items:
+        - name: Choose a Report Type
+          href: articles/report-designer/report-designer-tools/report-wizard/choose-a-report-type.md
         - name: Empty Report
           href: articles/report-designer/report-designer-tools/report-wizard/empty-report.md
         - name: Data-bound Report
@@ -864,9 +866,9 @@
           href: articles/report-designer/report-designer-tools/report-wizard/label-report.md
           items:
           - name: Select the Label Type
-            href: articles/report-designer/report-designer-tools/report-wizard/data-bound-report/select-the-label-type.md
+            href: articles/report-designer/report-designer-tools/report-wizard/label-report/select-the-label-type.md
           - name: Customize the Label Options
-            href: articles/report-designer/report-designer-tools/report-wizard/data-bound-report/customize-the-label-options.md     
+            href: articles/report-designer/report-designer-tools/report-wizard/label-report/customize-the-label-options.md     
     - name: SQL Data Source Wizard
       href: articles/report-designer/report-designer-tools/sql-data-source-wizard.md
     - name: Query Builder
