--- a/interface-elements-for-web/toc.yml
+++ b/interface-elements-for-web/toc.yml
@@ -880,6 +880,25 @@
             href: articles/report-designer/report-designer-tools/report-wizard/label-report/customize-the-label-options.md     
     - name: SQL Data Source Wizard
       href: articles/report-designer/report-designer-tools/sql-data-source-wizard.md
+      items:
+        - name: Add a New Data Source
+          href: articles/report-designer/report-designer-tools/sql-data-source-wizard/add-a-new-data-source.md
+          items:
+          - name: Choose a Data Connection
+            href: articles/report-designer/report-designer-tools/sql-data-source-wizard/add-a-new-data-source/choose-a-data-connection.md    
+          - name: Create a Query or Select a Stored Procedure
+            href: articles/report-designer/report-designer-tools/sql-data-source-wizard/add-a-new-data-source/create-a-query-or-select-a-stored-procedure.md
+          - name: Configure Query Parameters
+            href: articles/report-designer/report-designer-tools/sql-data-source-wizard/add-a-new-data-source/configure-query-parameters.md
+          - name: Configure Master-Detail Relationships
+            href: articles/report-designer/report-designer-tools/sql-data-source-wizard/add-a-new-data-source/configure-master-detail-relationships.md
+        - name: Edit an Existing Data Source
+          href: articles/report-designer/report-designer-tools/sql-data-source-wizard/edit-an-existing-data-source.md
+          items:
+          - name: Create a Query or Select a Stored Procedure
+            href: articles/report-designer/report-designer-tools/sql-data-source-wizard/edit-an-existing-data-source/create-a-query-or-select-a-stored-procedure.md
+          - name: Configure Query Parameters
+            href: articles/report-designer/report-designer-tools/sql-data-source-wizard/add-a-new-data-source/configure-query-parameters.md
     - name: Query Builder
       href: articles/report-designer/report-designer-tools/query-builder.md
     - name: Toolbox
